20140???		3.3
	- Fix to SCSI Reset handling to avoid lockups
	- Bug fixes to improve standards compatibility
	- Bug fix for Unit Attention Condition, which is now enabled by default.
		- scsi2sd-config can be used to disable it for those systems that
		truely require it (eg. Mac Plus).
	- Added Linked commands support.
	- Added support for configurable sector sizes between 64 and 2048 bytes.
	- Powerbook firmware added

20140214		3.2
	- Remove hacks around ATN handling, and implement proper select-with-atn
	support.  This fix is essential for communicating with some SCSI hosts.
	All SCSI2SD users are urged to upgrade to this firmware version.
	- More fixes to support Apple HD SC Setup (thanks to Doug Brown!)
	- Fixes to support SCSI1 initiators
		* Support non-arbitrating initiators.
		* Support single-initiator option.
		* Set CCS response format flag in INQUIRY response.

20131227		3.1
	- Fixes for better SCSI reset handling
	- Fix for reading the last sector of the SD card.
	- Performance improvements. 2.5x read, 2x write performance.

20131209		3.0.1
	- Bugfix release.
	- Fixes to support formatting with Apple HD SC Setup. This is very slow,
		Apple Drive Setup is preferred
	- Reliability improvement for rejecting unknown SCSI messages.
	- Reliability improvements for SD card initialisation and reading.


20131027		3.0
	- Initial public release.